# GenComp

./: .gitignore  CMakeLists.txt  HWConfig.h.in  Project.h.in  README.md
QtGUI/: CMakeLists.txt  gencompsettings.cpp  mainwindow.cpp  mainwindow.ui
QtGUI/include/: gencompsettings.h  mainwindow.h  mainwindow.ui
cli/: CMakeLists.txt  clioptions.cpp  clirunner.cpp  programutilities.cpp
cli/include/: clioptions.h  clirunner.h  programutilities.h
cmake/: BuildType.cmake  Docs.cmake  FindQt5.cmake  FindSystemC.cmake  Packages.cmake  Summary.cmake  Version.cmake
doc/: CMakeLists.txt  CommonAIBibliography.bib  CommonBibliography.bib  CommonNeuronalBibliography.bib  CommonPrivateBibliography.bib  Doxyfile.in  GENCOMPGlossary.dox  GENCOMP_GEN_Main.dox  GENCOMP_GEN_THEORY_INTRODUCTIONAL.dox  GENCOMP_GEN_THEORY_PARADIGM.dox  Overview.dox  TACGlossary.dox  TACQuickStartGuide.dox  TACdoxy_footer.html.in  TACdoxy_layout.xml.in  TACrelease-notes.dox
main/: CMakeLists.txt
main/DEMO/: CMakeLists.txt  GenCompDEMO_CLI.cpp
main/DEVEL/: CMakeLists.txt  GenCompDEMO_CLI.cpp  GenCompDEVEL_CLI.cpp
modules/: BioGenCompStates.cpp  CMakeLists.txt  GenCompStates.cpp  GenCompStates_Abstract.cpp  GenCompStates_Bio.cpp  GenCompStates_Tech.cpp  Stuff.cpp  TechGenCompStates.cpp  Utils.cpp  scAbstractGenComp_PU.cpp  scBioGenComp_PU.cpp  scGenCompStates.cpp  scGenComp_PU_Abstract.cpp  scGenComp_PU_AbstractDEMO.cpp  scGenComp_PU_Bio.cpp  scGenComp_PU_BioDEMO.cpp  scGenComp_PU_Bio_AbstractDEMO.cpp  scGenComp_PU_Bio_HodgkinHuxley.cpp  scGenComp_PU_Bio_HodgkinHuxleyDEMO.cpp  scGenComp_PU_Bio_Izhikevich.cpp  scGenComp_PU_Bio_IzhikevichDEMO.cpp  scGenComp_PU_Bio_Izkievits.cpp  scGenComp_PU_Tech.cpp  scGenComp_Simulator.cpp  scTechGenComp_PU.cpp
modules/include/: BioGenCompStates.h  DebugMacros.h  GenCompStates.h  GenCompStates_Abstract.h  GenCompStates_Bio.h  GenCompStates_Tech.h  HWConfig.h  MacroTimeBenchmarking.h  Macros.h  Project.h  Stuff.h  TechGenCompStates.h  Utils.h  scAbstractGenComp_PU.h  scBioGenComp_PU.h  scGenCompStates.h  scGenComp_PU_Abstract.h  scGenComp_PU_AbstractDEMO.h  scGenComp_PU_Bio.h  scGenComp_PU_BioDEMO.h  scGenComp_PU_Bio_HodgkinHuxley.h  scGenComp_PU_Bio_HodgkinHuxleyDEMO.h  scGenComp_PU_Bio_Izhikevich.h  scGenComp_PU_Bio_IzhikevichDEMO.h  scGenComp_PU_Bio_IzkievichDEMO.h  scGenComp_PU_Bio_Izkievits.h  scGenComp_PU_Tech.h  scGenComp_Simulator.h  scMacroTimeBenchmarking.h  scTechGenComp_PU.h
test/: CMakeLists.txt
test/DEVEL/: CMakeLists.txt  GenComp_DEVEL_simple_gtest.cpp  TestGenComp.cpp  TestStuff.cpp  TestUtils.cpp  sctestbench_simple.cpp
test/DEVEL/include/: scGTestModule_simple.h  sctestbench_simple.h
