# This is the main CMakeLists file of the QtGUI libraries
#
# @author János Végh

# It is just a simple proxy module for the subdirectories

message(HIGHLIGHTED "Configuring GenComp 'QtGUI' libraries")

#  add_subdirectory(DEVEL)	# The very basic hardware modules
#  add_subdirectory(DEMO)	# The processor-related modules
